# sibylsat-po

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
lib/grounder/: fetch_and_build_grounder.sh  pandaPiGrounding_modifications.patch
lib/parser/: fetch_and_build_parser.sh
lib/prec_and_effs_inference/: added_precs_and_effs.patch  fetch_and_build_prec_and_eff_inference.sh
scripts/: confirm_ok.py
src/: main.cpp
src/algo/: effects_inference.cpp  effects_inference.h  effects_inference_scc.cpp  effects_inference_scc_certified.cpp  plan_manager.cpp  plan_manager.h  planner.cpp  planner.h
src/algo/effect_inference_old/: effects_inference.cpp  effects_inference.h  effects_inference_scc.cpp
src/data/: abstract_task.h  action.h  htn_instance.cpp  htn_instance.h  method.h  mutex.cpp  mutex.h  pdt_node.cpp  pdt_node.cpp__  pdt_node.h  predicate.h
src/sat/: bimander_amo.cpp  bimander_amo.h  encoding.cpp  encoding.h  sat_interface.h  variable_provider.cpp  variable_provider.h
src/util/: command_utils.cpp  command_utils.h  dag_compressor.cpp  dag_compressor.cpp_backup  dag_compressor.h  log.cpp  log.h  names.cpp  names.h  params.cpp  params.h  project_utils.cpp  project_utils.h  signal_manager.h  stacktrace.cpp  stacktrace.h  statistics.h  temp_file.h  timer.h
